Fix header top margin on mobile.

--- a/app/assets/stylesheets/iphone.css.scss
+++ b/app/assets/stylesheets/iphone.css.scss
@@ -16,4 +16,7 @@
   .navbar-brand img {
     height: 50px !important;
   }
+  #header {
+    margin-top: 30px !important;
+  }
 }
